--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,30 +1,30 @@
 ---
-title: starlight-contributor-list
-description: Display a list of all contributors to your project
+title: Starlight Contributor List
+description: Display a list of all contributors to your project.
 head:
-  - tag: title
-    content: starlight-contributor-list
+    - tag: title
+      content: Starlight Contributor List
 template: splash
 editUrl: false
 hero:
-  tagline: Display a list of all contributors to your project
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Get Started
-      link: /getting-started/
-      icon: right-arrow
+    tagline: Display a list of all contributors to your project.
+    image:
+        html: "🤝"
+    actions:
+        - text: Get Started
+          link: /getting-started/
+          icon: right-arrow
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components'
+import { Card, CardGrid } from "@astrojs/starlight/components";
 
 ## Next steps
 
 <CardGrid stagger>
-  <Card title="Install the plugin" icon="puzzle">
-    Check the [getting started guide](/getting-started/) for installation instructions.
-  </Card>
-  <Card title="Configure the plugin" icon="setting">
-    Edit your config in the `astro.config.mjs` file.
-  </Card>
+    <Card title="Install the plugin" icon="puzzle">
+        Check the [getting started guide](/getting-started/) for installation instructions.
+    </Card>
+    <Card title="Use it" icon="rocket">
+        Use the `ContributorList` component to display a list of all contributors to your project.
+    </Card>
 </CardGrid>
