--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -15,9 +15,11 @@ import { Steps, Tabs, TabItem } from "@astrojs/starlight/components";
 
 <Steps>
 
-1. Configure the `PUBLIC_GITHUB_TOKEN` environment variable in your [GitHub Secrets](https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions).
+1. :::note
+   If your repository is **private**, you need to configure the `PUBLIC_GITHUB_TOKEN` environment variable in your [GitHub Secrets](https://docs.github.com/en/actions/security-for-github-actions/security-guides/using-secrets-in-github-actions). If the repository is public, you can skip this step.
+   :::
 
-1. `starlight-contributor-list` is a Starlight [plugin](https://starlight.astro.build/reference/plugins/). Install it by running the following command in your terminal:
+2. `starlight-contributor-list` is a Starlight [plugin](https://starlight.astro.build/reference/plugins/). Install it by running the following command in your terminal:
 
     <Tabs syncKey="pkg">
 
@@ -47,7 +49,7 @@ import { Steps, Tabs, TabItem } from "@astrojs/starlight/components";
 
     </Tabs>
 
-1. In any `.mdx` or `.astro` file, import the `ContributorList` component by adding the following import statement:
+3. In any `.mdx` or `.astro` file, import the `ContributorList` component by adding the following import statement:
 
     <Tabs syncKey="file">
 
@@ -71,7 +73,7 @@ import { Steps, Tabs, TabItem } from "@astrojs/starlight/components";
 
     </Tabs>
 
-1. Now you can use the `ContributorList` component within this file:
+4. Now you can use the `ContributorList` component within this file:
 
     <Tabs syncKey="file">
 
@@ -93,6 +95,6 @@ import { Steps, Tabs, TabItem } from "@astrojs/starlight/components";
 
     </Tabs>
 
-1. [Start the development server](https://starlight.astro.build/getting-started/#start-the-development-server) to preview the plugin in action.
+5. [Start the development server](https://starlight.astro.build/getting-started/#start-the-development-server) to preview the plugin in action.
 
 </Steps>
