--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -9,7 +9,8 @@ editUrl: false
 hero:
     tagline: Display a list of all contributors to your project.
     image:
-        html: "🤝"
+        dark: ../../assets/big-logo-dark.png
+        light: ../../assets/big-logo-light.png
     actions:
         - text: Get Started
           link: /getting-started/
