--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -98,3 +98,5 @@ import { Steps, Tabs, TabItem } from "@astrojs/starlight/components";
 4.  [Start the development server](https://starlight.astro.build/getting-started/#start-the-development-server) to preview the plugin in action.
 
 </Steps>
+
+Check out the [parameters](/parameters) which you can pass to the `ContributorList` component.
