--- a/docs/src/content/docs/demo.mdx
+++ b/docs/src/content/docs/demo.mdx
@@ -7,3 +7,7 @@ import { ContributorList } from "starlight-contributor-list";
 These are all contributors to the [Mutanuq](https://github.com/trueberryless-org/mutanuq) project.
 
 <ContributorList githubRepo="trueberryless-org/mutanuq" />
+
+And here you have all human contributors to the [Mutanuq](https://github.com/trueberryless-org/mutanuq) project (bots are ignored):
+
+<ContributorList githubRepo="trueberryless-org/mutanuq" ignore={["autofix-ci[bot]", "github-actions[bot]"]} />
