--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -56,7 +56,7 @@ import { Steps, Tabs, TabItem } from "@astrojs/starlight/components";
     <TabItem label="mdx">
 
     ```mdx
-    import { ContributorList } from "starlight-contributor-list";
+    import ContributorList from "starlight-contributor-list/components/ContributorList.astro";
     ```
 
     </TabItem>
@@ -65,7 +65,7 @@ import { Steps, Tabs, TabItem } from "@astrojs/starlight/components";
 
     ```astro
     ---
-    import { ContributorList } from "starlight-contributor-list"
+    import ContributorList from "starlight-contributor-list/components/ContributorList.astro";
     ---
     ```
 
