--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -33,6 +33,6 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 ## Contributors
 
-import { ContributorList } from "starlight-contributor-list";
+import ContributorList from "starlight-contributor-list/components/ContributorList.astro";
 
 <ContributorList githubRepo="trueberryless-org/starlight-contributor-list" ignore={["autofix-ci[bot]", "github-actions[bot]", "renovate[bot]"]} />
